--- a/frontend/templates/components/sidebars/responder-sidebar.html
+++ b/frontend/templates/components/sidebars/responder-sidebar.html
@@ -4,8 +4,8 @@
 <h2>Responder Panel</h2>
 <ul>
     <li><a href="{{ url_for('responder_dashboard') }}">Dashboard</a></li>
-    <li> <a href="{{ url_for('agency_emergencies') }}">Manage Emergencies</a></li>
-    <li><a href="{{ url_for('agency_settings') }}">Settings</a></li>
+    <li> <a href="{{ url_for('responder_emergencies') }}">Manage Emergencies</a></li>
+    <li><a href="{{ url_for('responder_settings') }}">Settings</a></li>
     <li><a href="#reports">Reports</a></li>
 </ul>
 {% endblock %}
