--- a/frontend/templates/pages/user/agency/emergencies.html
+++ b/frontend/templates/pages/user/agency/emergencies.html
@@ -3,6 +3,89 @@
 {% block dashboard_content %}
 <div class="dashboard emergencies">
     <header>
+        <h1>Agency Emergencies</h1>
+    </header>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Type</th>
+                <th>Description</th>
+                <th>Location</th>
+                <th>Responder(s)</th>
+                <th>Severity</th>
+                <th>Status</th>
+                <th>Media</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% if active_emergencies %}
+                {% for emergency in active_emergencies %}
+                <tr>
+                    <td>{{ emergency.event_type }}</td>
+                    <td>{{ emergency.description }}</td>
+                    <td>{{ emergency.location_str }}</td>
+                    <td>
+                        {% if emergency.responder_emergencies %}
+                            {% for res_emergency in emergency.responder_emergencies %}
+                            <p>{{ res_emergency.responder.user.profile.first_name }} {{ res_emergency.responder.user.profile.last_name }}</p>
+                            {% endfor %}
+                        {% else %}
+                        No responders assigned
+                        {% endif %}
+                    </td>
+                    <td>{{ emergency.severity }}</td>
+                    <td>{{ emergency.status | capitalize }}</td>
+                    <td>
+                        {% if emergency.attachments %}
+                            {% for attachment_url in emergency.attachments.split(',') %}
+                            <a href="{{ attachment_url }}" target="_blank">Attachment{{ loop.index }}</a>
+                            {% endfor %}
+                        {% else %}
+                        No media available
+                        {% endif %}
+                    </td>
+                    <td>
+                        {% if emergency.status != 'Resolved' %}
+                        <button class="btn edit">Assign</button>
+                        <form action="/agency/emergencies/{{ emergency.id }}/assign" method="post" class="reassign-form hide">
+                            {% if responders %}
+                            <label for="assignment-reassign">
+                                <select name="responder" id="assignment-reassign">
+                                    {% for responder in responders %}
+                                        {% if responder.status == 'available' %}
+                                        <option value="{{ responder.id }}">{{ responder.user.profile.first_name }} {{ responder.user.profile.last_name }}</option>
+                                        {% endif %}
+                                    {% endfor %}
+                                </select>
+                            </label>
+                            <input type="submit" value="Assign">
+                            {% else %}
+                            <p>No responders available.</p>
+                            {% endif %}
+                        </form>
+
+                        <form action="/emergencies/{{ emergency_id }}/resolve" method="post">
+                            <input class="btn add" type="submit" value="Mark as Resolved">
+                        </form>
+                        {% else %}
+                        No actions needed
+                        {% endif %}
+                    </td>
+                </tr>
+                {% endfor %}
+            {% else %}
+                <tr>
+                    <td style="text-align: center;" colspan="8">No emergencies found.</td>
+                </tr>
+            {% endif %}
+        </tbody>
+    </table>
+</div>
+
+<div class="dashboard emergencies">
+    <header>
         <h1>All Emergencies</h1>
     </header>
     
@@ -39,83 +122,8 @@
                     <td>{{ emergency.status | capitalize }}</td>
                     <td>
                         {% if emergency.attachments %}
-                            {% for attachment_url in emergency.attachments.split(', ') %}
-                            <a href="{{ attachment_url }}" target="_blank">Attachment{{ loop.index }}</a>
-                            {% endfor %}
-                        {% else %}
-                        No media available
-                        {% endif %}
-                    </td>
-                    <td>
-                        <button class="btn edit">Assign</button>
-                        <form action="/agency/emergencies/{{ emergency.id }}/assign" method="post" class="reassign-form hide">
-                            {% if responders %}
-                            <label for="assignment-reassign">
-                                <select name="responder" id="assignment-reassign">
-                                    {% for responder in responders %}
-                                        {% if responder.status == 'available' %}
-                                        <option value="{{ responder.id }}">{{ responder.user.profile.first_name }} {{ responder.user.profile.last_name }}</option>
-                                        {% endif %}
-                                    {% endfor %}
-                                </select>
-                            </label>
-                            <input type="submit" value="Assign">
-                            {% else %}
-                            <p>No responders available.</p>
-                            {% endif %}
-                        </form>
-                    </td>
-                </tr>
-                {% endfor %}
-            {% else %}
-                <tr>
-                    <td style="text-align: center;" colspan="8">No emergencies found.</td>
-                </tr>
-            {% endif %}
-        </tbody>
-    </table>
-</div>
-
-<div class="dashboard emergencies">
-    <header>
-        <h1>Agency Emergencies</h1>
-    </header>
-
-    <table>
-        <thead>
-            <tr>
-                <th>Type</th>
-                <th>Description</th>
-                <th>Location</th>
-                <th>Responder(s)</th>
-                <th>Severity</th>
-                <th>Status</th>
-                <th>Media</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% if agency_emergencies %}
-                {% for emergency in agency_emergencies %}
-                <tr>
-                    <td>{{ emergency.event_type }}</td>
-                    <td>{{ emergency.description }}</td>
-                    <td>{{ emergency.location_str }}</td>
-                    <td>
-                        {% if emergency.responder_emergencies %}
-                            {% for res_emergency in emergency.responder_emergencies %}
-                            <p>{{ res_emergency.responder.user.profile.first_name }} {{ res_emergency.responder.user.profile.last_name }}</p>
-                            {% endfor %}
-                        {% else %}
-                        No responders assigned
-                        {% endif %}
-                    </td>
-                    <td>{{ emergency.severity }}</td>
-                    <td>{{ emergency.status | capitalize }}</td>
-                    <td>
-                        {% if emergency.attachments %}
-                            {% for attachment_url in emergency.attachments.split(', ') %}
-                            <a href="{{ attachment_url }}" target="_blank">Attachment{{ loop.index }}</a>
+                            {% for attachment_url in emergency.attachments.split(',') %}
+                            <a href="{{ attachment_url }}" target="_blank">Attachment {{ loop.index }}</a>
                             {% endfor %}
                         {% else %}
                         No media available
@@ -152,4 +160,5 @@
 </div>
 
 <script src="{{ url_for('static', path='js/reassignForm.js') }}"></script>
+<script src="{{ url_for('static', path='js/emergencyStatusUpdate.js') }}"></script>
 {% endblock %}
