--- a/frontend/static/css/agency.css
+++ b/frontend/static/css/agency.css
@@ -42,7 +42,7 @@ tbody td a:hover {
 }
 
 tbody tr:hover {
-    background: var(--tertiary-color);
+    background: #e9e9e9;
 }
 
 a.btn, button.btn, input.btn {
