--- a/frontend/static/css/emergency.css
+++ b/frontend/static/css/emergency.css
@@ -32,7 +32,7 @@ header h1 {
 
 .details {
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: start;
     gap: 40px;
 }
@@ -58,6 +58,20 @@ header h1 {
 .row p {
     font-size: 0.6rem;
     color: var(--black-color);
+}
+
+.row .attachments {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+.row .attachments img {
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
 }
 
 .map-placeholder {
@@ -90,6 +104,10 @@ header h1 {
     
     .details .media {
         width: 100%;
+    }
+
+    .row .attachments {
+        justify-content: center;
     }
 }
 
