--- a/frontend/static/css/responder.css
+++ b/frontend/static/css/responder.css
@@ -1,11 +1,10 @@
-
 /* Table */
 table {
     width: 100%;
     border-collapse: collapse;
     background: var(--white-color);
     border-radius: 8px;
-    overflow: hidden;
+    overflow: auto;
     margin: 20px 0;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
@@ -43,7 +42,7 @@ tbody td a:hover {
 }
 
 tbody tr:hover {
-    background: var(--tertiary-color);
+    background: #e9e9e9;
 }
 
 a.btn, button.btn, input.btn {
