--- a/frontend/templates/components/navbar.html
+++ b/frontend/templates/components/navbar.html
@@ -3,9 +3,6 @@
         <img src="{{ url_for('static', path='images/logo.png') }}" alt="logo">
     </a>
 
-
-<!-- <img src="https://cdn-icons-png.freepik.com/256/10024/10024438.png?uid=R65046554&ga=GA1.1.2092350398.1730195801&semt=ais_hybrid" alt="" class="icon"> -->
-
     <div class="nav-links">
         {% if user %}
         <div class="dropdown">
@@ -42,17 +39,64 @@
         </div>
 
         {% else %}
-        <div class="link">
-            <a href="{{ url_for('home') }}" class="{% if page == 'index' %} active {% endif %}">Home</a>
-            <a href="{{ url_for('about') }}" class="{% if page == 'about' %} active {% endif %}">About</a>
-            <a href="{{ url_for('contact') }}" class="{% if page == 'contact' %} active {% endif %}">Contact</a>
-            <a href="{{ url_for('resources') }}" class="{% if page == 'contact' %} active {% endif %}"z>Resources</a>
+        <div class="link-container">
+            <img src="https://cdn-icons-png.freepik.com/256/12237/12237111.png?ga=GA1.1.2092350398.1730195801&semt=ais_hybrid" alt="icon" class="hamburger-icon nav-icon hide">
+    
+            <div class="link">
+                <a href="{{ url_for('home') }}" class="{% if page == 'index' %} active {% endif %}">Home</a>
+                <a href="{{ url_for('about') }}" class="{% if page == 'about' %} active {% endif %}">About</a>
+                <a href="{{ url_for('contact') }}" class="{% if page == 'contact' %} active {% endif %}">Contact</a>
+                <a href="{{ url_for('resources') }}" class="{% if page == 'contact' %} active {% endif %}"z>Resources</a>
+                {% if not user %}
+                <a href="{{ url_for('signup') }}" class="btn">Get Started</a>
+                {% endif %}
+            </div>
         </div>
+        
+        <script>
+            const hamburgerIcon = document.querySelector('nav img.hamburger-icon.nav-icon');
+            const navLinkGroup = document.querySelector('.link');
+        
+            // Set up default settings in case the page is lauched on a mobile or tab phone
+            if (window.innerWidth <= 1024) {
+                hamburgerIcon.classList.remove('hide');
+                navLinkGroup.style.display = 'none';
+            }
+        
+            hamburgerIcon.addEventListener('click', () => {
+                navLinkGroup.style.display = 'flex';
+                hamburgerIcon.classList.add('hide');
+            });
+        
+            // Close the navbar when clicking outside of it
+            document.addEventListener('click', (e) => {
+                const isClickInside = navLinkGroup.contains(e.target) || hamburgerIcon.contains(e.target);
+        
+                if (!isClickInside) {
+                    navLinkGroup.style.display = 'none';
+                    hamburgerIcon.classList.remove('hide');
+                }
+            });
+        
+            window.addEventListener('resize', () => {
+                if (window.innerWidth <= 1024) {
+                    // Close navLinkGroup when clicking outside
+                    document.addEventListener('click', (e) => {
+                        if (!navLinkGroup.contains(e.target) && e.target !== hamburgerIcon) {
+                            navLinkGroup.style.display = 'none';
+                        }
+                    });
+            
+                    // Show navLinkGroup when clicking on hamburger icon
+                    hamburgerIcon.classList.remove('hide');
+                    navLinkGroup.style.display = 'none';
+                } else {
+                    // Show navLinkGroup when clicking on hamburger icon
+                    hamburgerIcon.classList.add('hide');
+                    navLinkGroup.style.display = 'flex';
+                }
+            });
+        </script>
         {% endif %}
-        <div class="button">
-            {% if not user %}
-            <a href="{{ url_for('signup') }}" class="btn">Get Started</a>
-            {% endif %}
-        </div>
     </div>
 </nav>
