--- a/frontend/templates/components/sidebars/sidebar-base.html
+++ b/frontend/templates/components/sidebars/sidebar-base.html
@@ -1,16 +1,15 @@
-<img src="https://cdn-icons-png.freepik.com/256/10024/10024438.png?uid=R65046554&ga=GA1.1.2092350398.1730195801&semt=ais_hybrid" alt="icon" class="sidebar-hamburger-icon hide">
-<img src="https://cdn-icons-png.freepik.com/256/399/399274.png?ga=GA1.1.2092350398.1730195801&semt=ais_hybrid" alt="icon" class="cancel-icon hide">
+<img src="https://cdn-icons-png.freepik.com/256/12237/12237111.png?ga=GA1.1.2092350398.1730195801&semt=ais_hybrid" alt="icon" class="hamburger-icon sidebar-icon hide">
+<img src="https://cdn-icons-png.freepik.com/256/399/399274.png?ga=GA1.1.2092350398.1730195801&semt=ais_hybrid" alt="icon" class="cancel-icon sidebar-icon hide">
 
 <aside class="sidebar">
-
     <div class="sidebar-content">
         {% block sidebar_content %} {% endblock %}
     </div>
 </aside>
 
 <script>
-    const hamburgerIcon = document.querySelector('.sidebar-hamburger-icon');
-    const cancelIcon = document.querySelector('.cancel-icon');
+    const hamburgerIcon = document.querySelector('.hamburger-icon.sidebar-icon');
+    const cancelIcon = document.querySelector('.cancel-icon.sidebar-icon');
     const sidebar = document.querySelector('.sidebar');
 
     // Set up default settings in case the page is lauched on a mobile or tab phone
