--- a/frontend/templates/pages/emergency/report-emergency.html
+++ b/frontend/templates/pages/emergency/report-emergency.html
@@ -12,7 +12,7 @@
     <img src="https://cdn-icons-png.freepik.com/256/16381/16381783.png?uid=R65046554&ga=GA1.1.2092350398.1730195801&semt=ais_hybrid" alt="icon" class="icon">
     <label for="multi-file-upload" class="custom-file-upload">
         <p>Attach images</p>
-        <input type="file" id="multi-file-upload" multiple accept="image/*" class="hide">
+        <input type="file" name="pictures" id="multi-file-upload" multiple accept="image/*" class="hide">
     </label>
     
     <!-- Preview area -->
