--- a/frontend/static/css/resources.css
+++ b/frontend/static/css/resources.css
@@ -100,6 +100,7 @@ a.action {
 header h1 {
     font-size: 1.4rem;
     color: #444;
+    text-align: center;
 }
 
 .event-type {
@@ -110,6 +111,7 @@ header h1 {
 
 .event-type .emoji, header p {
     font-size: 1rem;
+    text-align: center;
 }
 
 .details {
