--- a/frontend/templates/components/sidebars/agency-sidebar.html
+++ b/frontend/templates/components/sidebars/agency-sidebar.html
@@ -8,6 +8,6 @@
     <li> <a href="{{ url_for('agency_emergencies') }}">Manage Emergencies</a></li>
     <li><a href="#reports">Resource Management</a></li>
     <li><a href="{{ url_for('agency_settings') }}">Settings</a></li>
-    <li><a href="#reports">Reports</a></li>
+    <li><a href="{{ url_for('get_all_reports') }}">Reports</a></li>
 </ul>
 {% endblock %}
