--- a/frontend/templates/pages/user/agency/emergencies.html
+++ b/frontend/templates/pages/user/agency/emergencies.html
@@ -66,7 +66,7 @@
                             {% endif %}
                         </form>
 
-                        <form action="/emergencies/{{ emergency_id }}/resolve" method="post">
+                        <form action="/emergencies/{{ emergency.id }}/resolve" method="post">
                             <input class="btn add" type="submit" value="Mark as Resolved">
                         </form>
                         {% else %}
