--- a/frontend/templates/pages/external/contact.html
+++ b/frontend/templates/pages/external/contact.html
@@ -1,15 +1,1 @@
-{% extends 'components/base.html' %}
-
-{% block content %}
-<p>Contact</p>
-<p>Contact</p>
-<p>Contact</p>
-<p>Contact</p>
-<p>Contact</p>
-<p>Contact</p>
-<p>Contact</p>
-<p>Contact</p>
-<p>Contact</p>
-<p>Contact</p>
-<p>Contact</p>
-{% endblock %}
+{% extends 'components/base-form.html' %}
