--- a/frontend/templates/components/sidebars/agency-sidebar.html
+++ b/frontend/templates/components/sidebars/agency-sidebar.html
@@ -6,7 +6,7 @@
     <li><a href="{{ url_for('agency_dashboard') }}">Dashboard</a></li>
     <li><a href="{{ url_for('agency_responders') }}">Manage Responders</a></li>
     <li> <a href="{{ url_for('agency_emergencies') }}">Manage Emergencies</a></li>
-    <li><a href="#reports">Resource Management</a></li>
+    <!-- <li><a href="#reports">Resource Management</a></li> -->
     <li><a href="{{ url_for('agency_settings') }}">Settings</a></li>
     <li><a href="{{ url_for('get_all_reports') }}">Reports</a></li>
 </ul>
