--- a/frontend/templates/pages/emergency/emergency-details.html
+++ b/frontend/templates/pages/emergency/emergency-details.html
@@ -62,6 +62,7 @@
                 <div id="map"></div>
 
                 <script>
+
                     fetch("https://ipinfo.io/json?token=45a0b01f8664a2")
                     .then((response) => response.json())
                     .then((jsonResponse) => {
@@ -82,6 +83,15 @@
                         L.marker(emergency_coordinates).addTo(map)
                            .bindPopup('Emergency location')
                            .openPopup();
+                        
+                        //const marker1 = L.marker(emergency_coordinates)
+                          //  .bindPopup(`Emergency Location`);
+
+                        //const marker2 = L.marker(current_coordinates)
+                           // .bindPopup(`Your Location`);
+
+                        //L.layerGroup([marker1, marker2])
+                        //.addTo(map);
                     })
                     .catch((error) => {
                         console.error("Error fetching data:", error);
